--- a/requirements.txt
+++ b/requirements.txt
@@ -20,8 +20,11 @@ tzdata==2023.3
 category_encoders==2.6.2
 openpyxl==3.1.2
 autograd==1.6.2
-dvc
-dvclive
-lightgbm
-xgboost
-catboost
+xgboost==2.0.0
+catboost==1.2.2
+pyarrow==13.0.0
+fastparquet==2023.8.0
+fastapi
+pydantic
+uvicorn
+requests
